welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:37: error: not found: value h
  for (i <- 0 to h-1){
                 ^Array1:39: error: not found: value c
    c=T(i)
    ^Array1:40: error: not found: value c
    setCouleurBrosse(c)
                     ^